# NumericalOptimization

./: README.md
lec1/: CMakeLists.txt
lec1/include/: func.hpp  lsgd.hpp
lec1/src/: lsgd.cpp  main.cpp  test.cpp
